fixed carriage return on "No Evidence" and added whitespace bt point text and action line

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -30,6 +30,9 @@
 	background-color: #ff001814;
 }
 
+.pointText {
+	margin-bottom: 8px;
+}
 
 .vote-stats {
     background: white;
